overlap fixes in progress

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,6 +23,9 @@
    /*background-repeat: no-repeat;*/
  }
 
+.main-form {
+  padding-bottom: 2%;
+}
 
  // .item-list {
  //   background-image: none;
